name:                tidal-suite
version:             0.1.0.0
synopsis:            Initial Tidal suite template, ready for customization
description:         Please see README.md
homepage:            https://github.com/lennart/tidal-suite#readme
license:             GPL3
license-file:        LICENSE
author:              Lennart Melzer
maintainer:          lennart@melzer.it
copyright:           2016 Lennart Melzer
category:            Sound
build-type:          Simple
extra-source-files:  mod.tidal
                     .dir-locals.el                   
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , tidal == 0.9
                     , tidal-midi == 0.9
  default-language:    Haskell2010

executable tidal-suite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tidal-suite
  default-language:    Haskell2010

test-suite tidal-suite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tidal-suite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lennart/tidal-suite
